scripts/nullaway/original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/strategy/StrategyPatternTutorial.java:8: error: [NullAway] @NonNull field learningStrategy not initialized
    StrategyPatternLearningStrategy learningStrategy;
                                    ^
    (see http://t.uber.com/nullaway )
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:46: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 9), repertoire (line 11) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Theatre(TheatreDirector director) {
           ^
    (see http://t.uber.com/nullaway )
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/bridge/Camera.java:11: error: [NullAway] @NonNull field lightRecorder not initialized
    private LightSensitiveMedium lightRecorder;
                                 ^
    (see http://t.uber.com/nullaway )
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/Station.java:34: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(name, null);
                   ^
    (see http://t.uber.com/nullaway )
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:73: error: [NullAway] initializer method does not guarantee @NonNull fields previousStop (line 53), nextStop (line 54) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        public Stop(Station name) {
               ^
    (see http://t.uber.com/nullaway )
5 errors
